--- a/index.html
+++ b/index.html
@@ -14,12 +14,36 @@
     <title>Cool Site 2.0</title>
   </head>
   <body>
-    <header class="container-fluid">
+    <header class="container-fluid bg-primary text-white text-center p-3">
       <div class="row">
-        <div class="col bg-primary text-white"><h1></h1></div>
+        <div class="col"><h1>Hey there I have a cool site</h1></div>
       </div>
     </header>
-    <main class="container-fluid"></main>
-    <footer class="container-fluid"></footer>
+    <main class="container-fluid">
+      <div class="row">
+        <article class="col-12 col-md-5 offset-md-3 border-top mt-5">
+          <div>
+            <h1>Why designers are important!</h1>
+            <p>
+                <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+            <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing</p>
+          </div>
+        </article>
+        <aside class="col-12 col-md-3 offset-md-1 ">
+          <div class="row">
+            <div class="col-12">
+              <img src="//placehold.it/175x100" alt="" class="mt-5" />
+              <h4>Some additional content</h4>
+              <p>
+                  <b>Lorem Ipsum </b> is simply dummy text of the printing and
+                  typesetting industry...
+              </p>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </main>
+    <footer class="container-fluid bg-primary"></footer>
   </body>
 </html>
